2006-08-22  Jorn Baayen  <jorn@openedhand.com>

	* applets/battery/battery.c: (timeout), (mb_panel_applet_create):
	* applets/clock/clock.c: (initial_timeout),
	(mb_panel_applet_create):
	* applets/launcher/launcher.c: (grab_notify_cb),
	(mb_panel_applet_create):
	* applets/showdesktop/showdesktop.c: (button_toggled_cb),
	(mb_panel_applet_create):
	* applets/systray/systray.c: (screen_changed_cb),
	(mb_panel_applet_create):
	* matchbox-panel/mb-panel-scaling-image.c: (reload_icon),
	(mb_panel_scaling_image_class_init),
	(mb_panel_scaling_image_set_icon):
	* matchbox-panel/mb-panel.c: (load_applet), (load_applets), (main):
	* matchbox-panel/mb-panel.h:

	Better size handling. No more manual sizing of applets needed.

2006-08-22  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel-scaling-image.c: (find_icon),
	(reload_icon), (icon_theme_changed_cb),
	(mb_panel_scaling_image_screen_changed),
	(mb_panel_scaling_image_class_init), (mb_panel_scaling_image_new),
	(mb_panel_scaling_image_set_icon):

	Cleanup.

2006-08-22  Jorn Baayen  <jorn@openedhand.com>

	* applets/clock/clock.c:
	* applets/launcher/launcher.c: (mb_panel_applet_create):
	* applets/showdesktop/showdesktop.c: (mb_panel_applet_create):
	* matchbox-panel/Makefile.am:
	* matchbox-panel/mb-panel-scaling-image.c:
	* matchbox-panel/mb-panel-scaling-image.h:
	* matchbox-panel/mb-panel.h:

	Moved scaling icon theme icon logic into its own GtkImage subclass,
	and use this in the launcher and showdesktop applets.

	Don't look at MBPanelScalingImage yet or your eyes will burn!
	It still needs severe cleanup

2006-08-22  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* applets/Makefile.am:
	* applets/showdesktop/Makefile.am:
	* applets/showdesktop/showdesktop.c:

	Added 'Show Desktop' button applet. Still needs to get an icon
	packed into it.

	* applets/clock/clock.c: (timeout), (mb_panel_applet_create):

	Put stuff into ClockApplet data structure.
