@@ -2,11 +2,11 @@ SUBDIRS = data
 
 AM_CPPFLAGS=-DPKGDATADIR=\"$(pkgdatadir)\" \
             -DGETTEXT_PACKAGE=\"matchbox-panel\" \
-	    -DDATADIR=\"$(sharedir)/matchbox-panel/battery/\"
+	    -DDATADIR=\"$(pkgdatadir)/battery/\"
 AM_CFLAGS = -Wall -g $(MATCHBOX_PANEL_CFLAGS) \
 	    -I$(top_srcdir) -I$(top_builddir) -Werror
 	    
-appletdir = $(libdir)/matchbox-panel
+appletdir = $(pkglibdir)
 applet_LTLIBRARIES = libbattery.la
 
 libbattery_la_SOURCES = battery.c
