@@ -1,17 +1,17 @@
-datadir = $(sharedir)/matchbox-panel/battery
-data_DATA = ac-adapter.png	        \
-	    battery-charged.png         \
-	    battery-charging-000.png    \
-	    battery-charging-020.png    \
-	    battery-charging-040.png    \
-	    battery-charging-060.png    \
-	    battery-charging-080.png    \
-	    battery-charging-100.png    \
-	    battery-discharging-000.png \
-	    battery-discharging-020.png \
-	    battery-discharging-040.png \
-	    battery-discharging-060.png \
-	    battery-discharging-080.png \
-	    battery-discharging-100.png 
+imagedir = $(pkgdatadir)/battery
+image_DATA = ac-adapter.png	        \
+	     battery-charged.png         \
+	     battery-charging-000.png    \
+	     battery-charging-020.png    \
+	     battery-charging-040.png    \
+	     battery-charging-060.png    \
+	     battery-charging-080.png    \
+	     battery-charging-100.png    \
+	     battery-discharging-000.png \
+	     battery-discharging-020.png \
+	     battery-discharging-040.png \
+	     battery-discharging-060.png \
+	     battery-discharging-080.png \
+	     battery-discharging-100.png 
 
 MAINTAINERCLEANFILES = Makefile.in
