@@ -2,7 +2,7 @@ AM_CPPFLAGS=-DPKGDATADIR=\"$(pkgdatadir)\" -DGETTEXT_PACKAGE=\"matchbox-panel\"
 AM_CFLAGS = -Wall -g $(MATCHBOX_PANEL_CFLAGS) $(LIBNOTIFY_CFLAGS) \
 	    -I$(top_srcdir) -I$(top_builddir)
 	    
-appletdir = $(libdir)/matchbox-panel
+appletdir = $(pkglibdir)
 applet_LTLIBRARIES = libsystray.la
 
 eggmarshalers.h: eggmarshalers.list
